Test Org - Speridian/src/objects/BA_Group_Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>ba_CareManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_Deductitble__c</fullName>
        <label>Deductible</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DependentStudentAge__c</fullName>
        <label>Dependent/Student Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>19/23</fullName>
                </value>
                <value>
                    <fullName>23/28</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Dme__c</fullName>
        <label>DME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DrugOptions__c</fullName>
        <label>Drug Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_EmergencyRoomCopay__c</fullName>
        <label>Emergency Room Copay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_EquipmentRider__c</fullName>
        <label>Equipment Rider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_FederalMentalHealth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Federal Mental Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_HdhpOption__c</fullName>
        <label>HDHP Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_IncentiveProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_InpatientCopay__c</fullName>
        <label>Inpatient Copay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_LineOfBusiness__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_MedicalBenefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_PackageId__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ParentCompetitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Competitor</label>
        <referenceTo>BA_Group_Competitor__c</referenceTo>
        <relationshipLabel>Group Competitor Products</relationshipLabel>
        <relationshipName>Group_Competitor_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_PcpSpcCopay__c</fullName>
        <label>PCP/SPC Copay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PlanType__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_PrescriptionDrugsBenefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescription Drugs Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProductCategory__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Ancilliary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ReligiousOrganizationException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Religious Organization Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_RemoveDomesticPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Domestic Partner</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Competitor Product</label>
    <nameField>
        <displayFormat>GCP-{0000}</displayFormat>
        <label>Group Competitor Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>